[project]
name = "beautysh"
version = "6.3.2"
description = "A Bash beautifier for the masses."
authors = [
    {name = "Bernardo Meurer", email = "bernardo@meurer.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["beautify", "bash", "shell", "beautifier", "script", "auto"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities"
]
dependencies = [
    "colorama>=0.4.4",
    "tomli>=1.0.0; python_version < '3.11'",
    "editorconfig>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/lovesegfault/beautysh"
Repository = "https://github.com/lovesegfault/beautysh"

[project.scripts]
beautysh = "beautysh.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.1",
    "isort>=5.10.1",
    "mypy>=0.931",
    "flake8>=4.0.1",
    "types-colorama>=0.4.3",
    "build>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99
skip_glob = ["/nix/store/*", "result/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
