[project]
name = "beautysh"
version = "6.4.1"
description = "A Bash beautifier for the masses."
authors = [
    {name = "Bernardo Meurer", email = "bernardo@meurer.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["beautify", "bash", "shell", "beautifier", "script", "auto"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities"
]
dependencies = [
    "colorama>=0.4.4",
    "editorconfig>=0.12.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/lovesegfault/beautysh"
Repository = "https://github.com/lovesegfault/beautysh"

[project.scripts]
beautysh = "beautysh.__main__:main"

[dependency-groups]
dev = [
    "build>=1.0.0",
    "hypothesis>=6.0.0",
    "mypy>=0.931",
    "pytest>=7.0.0",
    "PyYAML>=6.0.0",
    "ruff>=0.1.0",
    "types-colorama>=0.4.3",
    "types-PyYAML>=6.0.0",
    "vermin >= 1.7.0",
]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
